@@ -81,12 +81,12 @@ public class FixedDim {
   public final static Dimension x50_y0 = new Dimension(50, 0);
   public final static Dimension x70_y0 = new Dimension(70, 0);
   public final static Dimension x119_y0 = new Dimension(119, 0);
-  public final static Dimension x130_y0 = new Dimension(130,0);
-  public final static Dimension x142_y0 = new Dimension(142,0);
-  public final static Dimension x150_y0 = new Dimension(150,0);
+  public final static Dimension x130_y0 = new Dimension(130, 0);
+  public final static Dimension x142_y0 = new Dimension(142, 0);
+  public final static Dimension x150_y0 = new Dimension(150, 0);
   public final static Dimension x167_y0 = new Dimension(167, 0);
   public final static Dimension x181_y0 = new Dimension(181, 0);
-  public final static Dimension x197_y0 = new Dimension(197,0);
+  public final static Dimension x197_y0 = new Dimension(197, 0);
   public final static Dimension x200_y0 = new Dimension(200, 0);
   public final static Dimension x264_y0 = new Dimension(264, 0);
   public final static Dimension x272_y0 = new Dimension(272, 0);
@@ -99,7 +99,7 @@ public class FixedDim {
   public final static Dimension x0_y13 = new Dimension(0, 13);
   public final static Dimension x0_y15 = new Dimension(0, 15);
   public final static Dimension x0_y20 = new Dimension(0, 20);
-  public final static Dimension x0_y23 = new Dimension(0,23);
+  public final static Dimension x0_y23 = new Dimension(0, 23);
   public final static Dimension x0_y40 = new Dimension(0, 40);
   public final static Dimension x0_y200 = new Dimension(0, 200);
   public final static Dimension folderButton = new Dimension(25, 25);
